testsuite/tests/rename/should_fail/T10618.hs
module T10618 where

foo = Just $ Nothing <|> Nothing
